--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     font and the color is lower contrast</div>
                 <button id="sign-up-button">Sign up</button>
             </div>
-            <img width="400" height="200" style="padding-right: 20px; padding-bottom: 100px;">
+            <img width="400" height="200" style="padding-right: 20px; padding-bottom: 100px;" src="placeholder.png">
         </div>
     </div>
     <p id="random-text">Some random information.</p>
